--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,73 @@
 /* You can add global styles to this file, and also import other style files */
+
+
+body{
+    background: #108FC6;
+}
+
+table{
+    background: #FFFFFF;
+    table-layout: fixed;
+    width: 500px;
+}
+
+th{
+    background: 	#EFEFF1;
+}
+
+.mgTable{
+    width: 20em;
+    margin-top: 10px;
+    margin-left:auto; 
+    margin-right:auto;
+}
+
+ .avlcash-column{
+    text-align: right;
+}
+
+.account-column{
+    text-align: left;
+    font-size: 80%
+
+}
+
+.avlcash-column-header{
+    text-align: right;
+    font-size: 80%
+}
+
+.sub-text-header{
+    color: grey;
+}
+
+th > a {
+    display:block;
+    width:100%;
+    color: black
+}
+
+
+th {
+        a {
+            text-decoration: none;  
+        }
+
+        a:link, a:visited {
+        background-color: #f44336;
+        color: white ;
+        padding: 12px 25px;
+        //text-align: center;
+        text-decoration: none;
+        display: inline-block;
+    }
+    a:hover, a:active {
+        background-color: lightgray;
+        text-decoration: none;
+    }
+}
+
+
+.sub-text{
+    font-size : 80%;
+}
